--- a/themes/mytheme/templates/index.html
+++ b/themes/mytheme/templates/index.html
@@ -2,9 +2,9 @@
 {% extends "base.html" %}
 {% block content %}
 <section class="home-hero">
-  <div class="hero-inner">
+  <div class="container"> 
     <div class="hero-media">
-      <img src="/images/hero-graphic.jpg" alt="hero graphic" class="hero-graphic">
+      <img src="{{ SITEURL }}/images/hero-graphic.jpg" alt="hero graphic" class="hero-graphic">
       <div class="hero-content">
         <h1 class="hero-title">{{ SITENAME }}</h1>
         <p class="hero-sub">{{ SITE_DESCRIPTION }}</p>
